--- a/index.html
+++ b/index.html
@@ -8,7 +8,70 @@
     <title>Instagram</title>
 </head>
 <body>
-    <h1>Començando...</h1>
+    <main id="main-container">
+        <!-- Banner container -->
+        <dir id="banner-container">
+            <img src="img/banner2.png" alt="crie uma conta no Instagram">
+        </dir>
+        <!-- Login e Registro -->
+        <div class="form-container">
+            <div id="form-box">
+                <img src="img/logo_instagram.png" alt="Instagram">
+                <form id="login-form">
+                    <input type="text" name="username" placeholder="Número de telefone, usúario ou email"/>
+                    <input type="password" name="password" placeholder="Senha"/>
+                    <input type="submit" value="Entrar"/>
+                </form>
+                <div class="sepatator">
+                    <div class="line">
+                    </div>
+                    <span>Ou</span>
+                </div>
+                <div id="other-links">
+                    <div id="facebook-login">
+                        <img src="img/logo_facebook.svg" alt="facebook-login">
+                        <span>Entrar com o Facebook</span>
+                    </div>
+                    <div id="forgot-pass">
+                        <a href="#">Esqueceu a senha?</a>
+                    </div>
+                </div>
+            </div>
+            <div id="registro-container">
+                <p>Não tem uma conta? <a href="#">Cadastre-se</a> </p>
+            </div>
+            <div id="get-app-container">
+                <p>Obtenha o aplicativo.</p>
+                <a href="#">
+                    <img src="img/apple_btn.png" alt="Apple Store">
+                </a>
+                <a href="#">
+                    <img src="img/gplay_btn.png" alt="Google Play">
+                </a>
+
+
+            </div> 
+            </div> 
+        </div>
+    </main>
+    <footer>
+        <nav>
+            <ul id="footer-links">
+                <li><a href="#">Meta</a></li>
+                <li><a href="#">Sobre</a></li>
+                <li><a href="#">Blog</a></li>
+                <li><a href="#">Ajuda</a></li>
+                <li><a href="#">API</a></li>
+                <li><a href="#">Privacidade</a></li>
+                <li><a href="#">Termos</a></li>
+                <li><a href="#">Principais Contas</a></li>
+                <li><a href="#">Hastags</a></li>
+                <li><a href="#">Localização</a></li>
+                <li><a href="#">Instagram Lite</a></li>
+            </ul>
+        </nav>
+        <p id="copyright">&copy; 2023 Instagran from Meta</p>
+    </footer>
     
 </body>
 </html>
